I see this error with the app, reported by NextJS, please fix it. The er

--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
   "description": "This is a NextJS starter in Firebase Studio.",
   "main": "index.js",
   "directories": {
-    "doc": "docs"
+    "doc": "docs",
+    "lib": "lib"
   },
   "keywords": [],
   "author": "",
