--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
+    "wav": "^1.0.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -65,6 +66,7 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@types/uuid": "^9.0.8",
+    "@types/wav": "^1.0.4",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
