--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
-
 {
   "name": "omni",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --port 9002 --hostname 0.0.0.0",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
@@ -13,8 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.8.0",
-    "@genkit-ai/next": "^1.8.0",
+    "@genkit-ai/googleai": "^1.0.0",
+    "@genkit-ai/next": "^1.0.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -42,7 +41,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^10.12.2",
-    "genkit": "^1.8.0",
+    "genkit": "^1.0.0",
     "lucide-react": "^0.475.0",
     "next": "14.2.4",
     "patch-package": "^8.0.0",
@@ -67,7 +66,7 @@
     "@types/react-dom": "^18.3.7",
     "@types/uuid": "^9.0.8",
     "@types/wav": "^1.0.4",
-    "genkit-cli": "^1.8.0",
+    "genkit-cli": "^1.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
