--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 9002 --hostname 0.0.0.0",
+    "dev": "next dev --port 9002 --hostname 0.0.0.0 --turbopack",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
@@ -44,7 +44,7 @@
     "firebase": "^10.12.2",
     "genkit": "^1.0.0",
     "lucide-react": "^0.475.0",
-    "next": "14.2.4",
+    "next": "^15.4.1",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -70,7 +70,8 @@
     "genkit-cli": "^1.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/bun": "latest"
   },
   "description": "This is a NextJS starter in Firebase Studio.",
   "main": "index.js",
