--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "firebase": "^10.12.2",
     "genkit": "^1.0.0",
     "lucide-react": "^0.475.0",
-    "next": "14.2.4",
+    "next": "^15.4.1",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
