--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "omni",
   "version": "0.1.0",
@@ -44,7 +45,7 @@
     "firebase": "^10.12.2",
     "genkit": "^1.0.0",
     "lucide-react": "^0.475.0",
-    "next": "^15.4.1",
+    "next": "14.2.4",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
